# metal-analyzer

./: .gitignore  LICENSE  README.md  README_en.md  demo_test.py  find_recent_moves.py  full_backtest.py  generate_full_table.py  pyproject.toml  verification.txt  verification_full.txt  verification_full_period.txt  verification_recent.txt
docs/DISCORD_WEBHOOK_20260204/: implementation_plan.md  task.md  walkthrough.md
docs/LONG_TREND_ANALYSIS_20260204/: implementation_plan.md  task.md  walkthrough.md
docs/MIDDLE_TREND_ANALYSIS_20260204/: implementation_plan.md  task.md  walkthrough.md
docs/UPDATE_README_20260204/: task.md
examples/: demo-20251230.py  demo-20260130.py  demo.py  demo_test.py  find_moves.py  send_gold_trend.py  verify_long_trend.py  verify_middle_trend.py
metal_analyzer/: __init__.py
metal_analyzer/core/: __init__.py  analyzer.py
metal_analyzer/indicators/: __init__.py  bollinger_bands.py  rsi.py  sma.py
metal_analyzer/models/: __init__.py  advanced_predictor.py  long_trend_predictor.py  middle_trend_predictor.py  short_trend_predictor.py  signal_entry.py  top_down.py
metal_analyzer/patterns/: __init__.py  double_bottom.py  double_top.py
